[package]
name = "imgur_a"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.28.0", features = ["full", "rt-multi-thread"]}
reqwest = {version = "0.11.17", features = ["gzip"]}
regex = "1.8.1"
async-channel = "1.8.0"
serde = {version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
lazy_static = "1.4.0"
atomic-counter = "1.0.1"